añadido verde-amarillo

--- a/prueba.html
+++ b/prueba.html
@@ -45,6 +45,7 @@ Version 0.1  -->
             <div id="PrimerJugador" class="col-1">Puntuacion</div>
             <!-- Con la siguiente linea queremos que todos ocupen lo mismo y esten en filas separadas.-->
             <div class="w-100"></div>
+            <div class="w-100" style="background-color: greenyellow;"></div>
             <div class="col-3">Alfonso</div>
             <div id="SegundoJugador" class="col-3">Puntuacion</div>
             <div class="w-100"></div>
