--- a/prueba.html
+++ b/prueba.html
@@ -7,6 +7,9 @@ Version 0.1  -->
     <!-- Referencia para BOOTSTRAP 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
+
+
     <!-- Hacer la pagina un poco mas responsive con la siguiente linea -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Enlace a nuestro archivo de Javascript donde trabajaremos Backend -->
@@ -21,7 +24,7 @@ Version 0.1  -->
     <header>
 
         <div class="p-5 text-center xlbg-image" style="background-image: url('https://mdbootstrap.com/img/new/slides/041.jpg') ;         
-        background-size: cover; height: 800px; ">
+        background-size: cover; height: 400px; ">
             <!-- Usamos background size para que llene todo el div, el alto lo podemos modificar.-->
             <nav class="navbar navbar-expand-md navbar-dark shadow-5-strong">
                 <div class="container-fluid">
